add swagger for confirm and cancel event
