# src/main/resources/swagger.json
@@ -891,6 +891,322 @@
         }
       }
     },
+    "/api/events/{id}/status": {
+      "put": {
+        "tags": [
+          "event-controller"
+        ],
+        "summary": "confirmOrCancelEvent",
+        "operationId": "confirmOrCancelEventUsingPUT",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "*/*"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "id",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "in": "body",
+            "name": "eventParam",
+            "description": "eventParam",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "status"
+              ],
+              "properties": {
+                "status": {
+                  "type": "number"
+                }
+              },
+              "example": {
+                "status": 2
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "status_code : 200. Meaning: Thành công \n status_code : 903 \n Message: event status can not null. Meaning: status của event không thể được null. \n status_code : 900 \n Message: not find event by id. Meaning: không tìm thấy event bởi id. \n status_code : 907 \n Message: can not change status event last month. Meaning: không thể thay đổi status event của tháng trước đó. \n Message: event confirmed or canceled. Meaning: event đã được xác nhận hoặc hủy. \n status_code : 999 \n Message: system error. Meaning: Lỗi hệ thống , liên hệ admin",
+            "schema": {
+              "type": "object",
+              "required": [
+                "data",
+                "status_code"
+              ],
+              "properties": {
+                "data": {
+                  "type": "object",
+                  "required": [
+                    "id",
+                    "status",
+                    "createdDate",
+                    "updatedDate",
+                    "beginDate",
+                    "endDate",
+                    "group",
+                    "eventUserList"
+                  ],
+                  "properties": {
+                    "id": {
+                      "type": "number"
+                    },
+                    "name": {
+                      "type": "string"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
+                    "status": {
+                      "type": "number"
+                    },
+                    "address": {
+                      "type": "string"
+                    },
+                    "createdDate": {
+                      "type": "string"
+                    },
+                    "updatedDate": {
+                      "type": "string"
+                    },
+                    "beginDate": {
+                      "type": "string"
+                    },
+                    "endDate": {
+                      "type": "string"
+                    },
+                    "group": {
+                      "type": "object",
+                      "required": [
+                        "id",
+                        "name",
+                        "groupType",
+                        "createdDate",
+                        "additionalConfig"
+                      ],
+                      "properties": {
+                        "id": {
+                          "type": "number"
+                        },
+                        "name": {
+                          "type": "string"
+                        },
+                        "description": {
+                          "type": "string"
+                        },
+                        "groupType": {
+                          "type": "object",
+                          "required": [
+                            "id"
+                          ],
+                          "properties": {
+                            "id": {
+                              "type": "number"
+                            },
+                            "name": {
+                              "type": "string"
+                            }
+                          }
+                        },
+                        "createdDate": {
+                          "type": "string"
+                        },
+                        "additionalConfig": {
+                          "type": "object",
+                          "description": "cấu trúc data config của club hoặc support chung"
+                        }
+                      }
+                    },
+                    "eventUserList": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "required": [
+                          "user",
+                          "type"
+                        ],
+                        "properties": {
+                          "user": {
+                            "type": "object",
+                            "properties": {
+                              "username": {
+                                "type": "string"
+                              },
+                              "lastName": {
+                                "type": "string"
+                              },
+                              "firstName": {
+                                "type": "string"
+                              },
+                              "fullName": {
+                                "type": "string"
+                              },
+                              "email": {
+                                "type": "string"
+                              },
+                              "userRole": {
+                                "type": "array",
+                                "items": {
+                                  "type": "string"
+                                }
+                              },
+                              "avatar": {
+                                "type": "string"
+                              },
+                              "birthday": {
+                                "type": "date"
+                              },
+                              "numberPhone": {
+                                "type": "string"
+                              },
+                              "gmail": {
+                                "type": "string"
+                              },
+                              "skype": {
+                                "type": "string"
+                              },
+                              "dateStartWork": {
+                                "type": "string"
+                              }
+                            }
+                          },
+                          "event": {
+                            "type": "object"
+                          },
+                          "type": {
+                            "type": "number"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "message": {
+                  "type": "string"
+                },
+                "status_code": {
+                  "type": "integer",
+                  "format": "int32"
+                },
+                "errors": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "required": [
+                      "errorCode",
+                      "message"
+                    ],
+                    "properties": {
+                      "errorCode": {
+                        "type": "number"
+                      },
+                      "message": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              },
+              "example": {
+                "data": {
+                  "id": 5,
+                  "name": "Đá bóng",
+                  "description": "Đá bóng hàng tuần",
+                  "status": 2,
+                  "address": "Sân vận động Mỹ Đình",
+                  "createdDate": "17-09-2018 13:57",
+                  "updatedDate": "17-09-2018 13:57",
+                  "beginDate": "15-09-2018 18:30",
+                  "endDate": "15-09-2018 20:30",
+                  "group": {
+                    "id": 6,
+                    "name": "Câu lạc bố Đá Bóng",
+                    "description": null,
+                    "groupType": {
+                      "id": 2,
+                      "name": "Câu lạc bộ"
+                    },
+                    "createdDate": "17-09-2018 13:57",
+                    "additionalConfig": {
+                      "host": "kpi.man",
+                      "minNumberOfSessions": 2,
+                      "participationPoint": 3,
+                      "effectivePoint": 4
+                    }
+                  },
+                  "eventUserList": [
+                    {
+                      "user": {
+                        "username": "kpi.employee",
+                        "lastName": "kpi",
+                        "firstName": "employee",
+                        "fullName": null,
+                        "email": "kpi.employee@higgsup.com",
+                        "userRole": null,
+                        "avatar": null,
+                        "birthday": null,
+                        "numberPhone": null,
+                        "address": null,
+                        "gmail": null,
+                        "skype": null,
+                        "dateStartWork": null
+                      },
+                      "type": 1
+                    },
+                    {
+                      "user": {
+                        "username": "kpi.test",
+                        "lastName": "kpi",
+                        "firstName": "test",
+                        "fullName": null,
+                        "email": "kpi.test@higgsup.com",
+                        "userRole": null,
+                        "avatar": null,
+                        "birthday": null,
+                        "numberPhone": null,
+                        "address": null,
+                        "gmail": null,
+                        "skype": null,
+                        "dateStartWork": null
+                      },
+                      "type": 3
+                    }
+                  ],
+                  "additionalConfig": {
+                    "host": "kpi.man",
+                    "minNumberOfSessions": 2,
+                    "participationPoint": 3,
+                    "effectivePoint": 4
+                  }
+                },
+                "status_code": 200
+              }
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/api/events/club": {
       "post": {
         "tags": [
